ipc/ipdl/test/ipdl/error/multimanDupMgrs.ipdl
include protocol multimanDupMgrsMgr;

protocol multimanDupMgrs {
    manager multimanDupMgrsMgr or multimanDupMgrsMgr;

child:
    __delete__();
};
